--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.19",
     "dexie": "^4.2.1",
     "echarts": "^6.0.0",
+    "echarts-wordcloud": "^2.1.0",
     "element-plus": "^2.11.9",
     "lodash": "^4.17.21",
     "pinia": "^3.0.4",
