--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3",
+    "vue3-seamless-scroll": "^3.0.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
